--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	},
 	"scripts": {
 		"start": "webpack-dev-server --mode development --watch",
-		"build": "webpack --mode production"
+		"build": "webpack --mode production",
+		"predeploy": "npm run build",
+		"deploy": ""
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -36,6 +38,7 @@
 		"clean-webpack-plugin": "^2.0.0",
 		"css-loader": "^2.1.1",
 		"file-loader": "^3.0.1",
+		"gh-pages": "^2.0.1",
 		"html-webpack-plugin": "^3.2.0",
 		"mini-css-extract-plugin": "^0.5.0",
 		"node-sass": "^4.11.0",
